k8s-resources/istio/virtual-service.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: financial-control-routes
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "*" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: financial-info-service
